[project]
name = "mistralai"
version = "1.9.1"
description = "Python Client SDK for the Mistral AI API."
authors = [{ name = "Mistral" },]
readme = "README-PYPI.md"
requires-python = ">=3.9"
dependencies = [
    "eval-type-backport >=0.2.0",
    "httpx >=0.28.1",
    "pydantic >=2.10.3",
    "python-dateutil >=2.8.2",
    "typing-inspection >=0.4.0",
]

[tool.poetry]
repository = "https://github.com/mistralai/client-python.git"
packages = [
    { include = "mistralai", from = "src" },
    { include = "mistralai_azure", from = "packages/mistralai_azure/src" },
    { include = "mistralai_gcp", from = "packages/mistralai_gcp/src" },
]
include = ["py.typed", "src/mistralai/py.typed"]

[tool.setuptools.package-data]
"*" = ["py.typed", "src/mistralai/py.typed"]

[virtualenvs]
in-project = true

[tool.poetry.group.dev.dependencies]
mypy = "==1.15.0"
pylint = "==3.2.3"
pytest = "^8.2.2"
pytest-asyncio = "^0.23.7"
types-python-dateutil = "^2.9.0.20240316"
types-authlib = "^1.5.0.20250516"

[tool.poetry.group.lint.dependencies]
ruff = "^0.11.10"
pyright = "^1.1.401"
mypy = "==1.15.0"


[project.optional-dependencies]
gcp = [
    "google-auth >=2.27.0",
    "requests >=2.32.3"
]
agents = [
    "mcp >=1.0,<2.0; python_version >= '3.10'",
    "griffe >=1.7.3,<2.0",
    "authlib >=1.5.2,<2.0",
]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
asyncio_default_fixture_loop_scope = "function"
pythonpath = ["src"]

[tool.mypy]
disable_error_code = "misc"

[[tool.mypy.overrides]]
module = "typing_inspect"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = [
    "jsonpath.*",
    "typing_inspect.*",
    "authlib.*",
    "mcp.*",
    "griffe.*"
]
ignore_missing_imports = true

[tool.pyright]
venvPath = "."
venv = ".venv"
