[project]
name = "mistralai"
version = "1.11.1"
description = "Python Client SDK for the Mistral AI API."
authors = [{ name = "Mistral" }]
requires-python = ">=3.10"
readme = "README.md"
dependencies = [
    "eval-type-backport >=0.2.0",
    "httpx >=0.28.1",
    "pydantic >=2.10.3",
    "python-dateutil >=2.8.2",
    "typing-inspection >=0.4.0",
    "pyyaml (>=6.0.2,<7.0.0)",
    "invoke (>=2.2.0,<3.0.0)",
    "opentelemetry-sdk (>=1.33.1,<2.0.0)",
    "opentelemetry-api (>=1.33.1,<2.0.0)",
    "opentelemetry-exporter-otlp-proto-http (>=1.37.0,<2.0.0)",
    "opentelemetry-semantic-conventions (>=0.59b0,<0.60)",
]

[project.optional-dependencies]
gcp = [
    "google-auth >=2.27.0",
    "requests >=2.32.3",
]
agents = [
    "mcp >=1.0,<2.0",
    "griffe >=1.7.3,<2.0",
    "authlib >=1.5.2,<2.0",
]
realtime = [
    "websockets >=13.0",
]

[project.urls]
Repository = "https://github.com/mistralai/client-python.git"

[dependency-groups]
dev = [
    "mypy==1.15.0",
    "pylint==3.2.3",
    "pytest>=8.2.2,<9",
    "pytest-asyncio>=0.23.7,<0.24",
    "types-python-dateutil>=2.9.0.20240316,<3",
    "types-authlib>=1.5.0.20250516,<2",
    "types-pyyaml>=6.0.12.20250516,<7",
    "mcp>=1.0,<2",
    "griffe>=1.7.3,<2",
    "authlib>=1.5.2,<2",
]
lint = [
    "ruff>=0.11.10,<0.12",
    "pyright>=1.1.401,<2",
    "mypy==1.15.0",
]

[tool.uv]
default-groups = [
    "dev",
    "lint",
]

[tool.setuptools.package-data]
"*" = ["py.typed", "src/mistralai/py.typed"]

[tool.hatch.build.targets.sdist]
include = [
    "src/mistralai",
    "packages/mistralai_azure/src/mistralai_azure",
    "packages/mistralai_gcp/src/mistralai_gcp",
]

[tool.hatch.build.targets.sdist.force-include]
"py.typed" = "py.typed"
"src/mistralai/py.typed" = "src/mistralai/py.typed"

[tool.hatch.build.targets.wheel]
include = [
    "src/mistralai",
    "packages/mistralai_azure/src/mistralai_azure",
    "packages/mistralai_gcp/src/mistralai_gcp",
]

[tool.hatch.build.targets.wheel.sources]
"src/mistralai" = "mistralai"
"packages/mistralai_azure/src/mistralai_azure" = "mistralai_azure"
"packages/mistralai_gcp/src/mistralai_gcp" = "mistralai_gcp"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
pythonpath = ["src"]

[tool.mypy]
disable_error_code = "misc"

[[tool.mypy.overrides]]
module = "typing_inspect"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = [
    "jsonpath.*",
    "typing_inspect.*",
    "authlib.*",
    "mcp.*",
    "griffe.*"
]
ignore_missing_imports = true

[tool.pyright]
venvPath = "."
venv = ".venv"
